form/src/tests/derive/unimplemented_primitive.stderr
error[E0277]: the trait bound `u32: form::Form` is not satisfied
  --> $DIR/unimplemented_primitive.rs:17:1
   |
17 | #[form]
   | ^^^^^^^ the trait `form::Form` is not implemented for `u32`
   |
   = help: see issue #48214
